# scholar-ai

./: .gitignore  README.md
.github/workflows/: deploy-fastapi.yml  deploy-mcp-server.yml
fastapi-client/: .dockerignore  Dockerfile  context_manager.py  conversation_store.py  main.py  mcp_client.py  pyproject.toml
fastapi-client/papers/mcp/: papers_info.json
fastapi-client/tests/: test_context_manager.py  test_endpoints.py
sse/: main.py  mcp_chatbot.py  pyproject.toml  server_config.json
stdio/: .gitignore  mcp_chatbot.py  pyproject.toml
streamablehttp/: .dockerignore  Dockerfile  main.py  mcp_chatbot.py  pyproject.toml  research_server.py  server_config.json
streamablehttp/papers/document_ai_ocr_agentic_extraction/: papers_info.json
